syntax = "proto2";

package nonce;
option go_package = "proto";

import "core/proto/core.proto";

service NonceService {
	rpc Nonce(core.Empty) returns (NonceMessage) {}
	rpc Valid(NonceMessage) returns (ValidMessage) {}
}

message NonceMessage {
	optional string nonce = 1;
}

message ValidMessage {
    optional bool valid = 1;
}
